k8s-cluster-configuration/applications/denislavgavrilov/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: denislavgavrilov
  namespace: denislavgavrilov
  labels:
    app: denislavgavrilov
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: denislavgavrilov
  template:
    metadata:
      labels:
        app: denislavgavrilov
    spec:
      containers:
        - name: denislavgavrilov
          image: registry.k6nis.dev/denislavgavrilov:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
