k8s-cluster-configuration/applications/denislavgavrilov/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: denislavgavrilov-service
  namespace: denislavgavrilov
spec:
  selector:
    app: denislavgavrilov
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
